Bug#39338: Fieldnames in INFORMATIONSCHEMA.PARTITIONS.PARTITION_EXPRESSION become unescaped

Problem was only with the print out of the KEY partitioning list of
fields, it did not include quotes, even if it was needed.

Fixed by always add quotes if needed.